platform/mac/accessibility/aria-multiline.html sometimes asserts in AccessibilityController::removeNotificationListener https://bugs.webkit.org/show_bug.cgi?id=127141

Reviewed by Alexey Proskuryakov.

Don't assert that the notification handler needs to be cleaned up. Deallocing the controller should be enough to clean up as it is.

* DumpRenderTree/mac/AccessibilityControllerMac.mm:
(AccessibilityController::~AccessibilityController):


Canonical link: https://commits.webkit.org/145146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162179 268f45cc-cd09-0410-ab3c-d52691b4dbfc